
[TestQueryParamsArePassedCorrectly - 1]
{
 "args": {
  "hi": "1"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=1"
}
---

[TestQueryParamsArePassedCorrectly - 2]
{
 "args": {
  "bye": "2",
  "hi": "1"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=1&bye=2"
}
---

[TestQueryParamsArePassedCorrectly - 3]
{
 "args": {
  "hi": " hello world "
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=%20hello%20world%20"
}
---

[TestQueryParamsArePassedCorrectly - 4]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestQueryParamsArePassedCorrectly - 5]
{
 "args": {
  "hi": [
   "1",
   "2",
   "3"
  ]
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=1&hi=2&hi=3"
}
---

[TestQueryParamsArePassedCorrectly - 6]
{
 "args": {
  "bye": "",
  "hi": ""
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=&bye="
}
---

[TestQueryParamsArePassedCorrectly - 7]
{
 "args": {
  "hi": "null"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=null"
}
---

[TestQueryParamsArePassedCorrectly - 8]
{
 "args": {
  "bye": "false",
  "hi": "true"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=true&bye=false"
}
---

[TestQueryParamsArePassedCorrectly - 9]
{
 "args": {
  "bye": "456.789",
  "hi": "123"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=123&bye=456.789"
}
---

[TestQueryParamsArePassedCorrectly - 10]
{
 "args": {
  "bar": " space ",
  "bye": "true",
  "foo": "null",
  "hi": "1"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=1&bye=true&foo=null&bar=%20space%20"
}
---

[TestQueryParamsArePassedCorrectly - 11]
{
 "args": {
  "bye": "goodbye/world",
  "hi": "hello world"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any?hi=hello%20world&bye=goodbye%2Fworld"
}
---

[TestNonTerminatedPaths - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "Referer": "<Any value>",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestRetainHostHeader - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "testns1.com",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://testns1.com/any"
}
---

[TestOnlyGetAllowed - 2]
[]uint8{0x4d, 0x65, 0x74, 0x68, 0x6f, 0x64, 0x20, 0x4e, 0x6f, 0x74, 0x20, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x65, 0x64, 0xa}
---

[TestNonTerminatedPaths - 2]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestNonTerminatedPaths - 3]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 2]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Content-Length": "0",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "POST",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 3]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Content-Length": "0",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "PUT",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 4]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Content-Length": "0",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "PATCH",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 5]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "DELETE",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 6]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "CONNECT",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 7]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "OPTIONS",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestAnyMethod - 8]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "TRACE",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestTerminatedPaths - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "Referer": "<Any value>",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestTerminatedPaths - 2]
[]uint8{0x34, 0x30, 0x34, 0x20, 0x70, 0x61, 0x67, 0x65, 0x20, 0x6e, 0x6f, 0x74, 0x20, 0x66, 0x6f, 0x75, 0x6e, 0x64, 0xa}
---

[TestRedirectsNotFollowed - 1]
&http.Response{
    Status:     "302 Found",
    StatusCode: 302,
    Proto:      "HTTP/1.1",
    ProtoMajor: 1,
    ProtoMinor: 1,
    Header:     {
        "Content-Length": {"0"},
        "Location":       {"https://google.com"},
    },
    Body:             http.noBody{},
    ContentLength:    0,
    TransferEncoding: nil,
    Close:            false,
    Uncompressed:     false,
    Trailer:          {},
    Request:          &http.Request{
        Method: "GET",
        URL:    &url.URL{
            Scheme:      "http",
            Opaque:      "",
            User:        (*url.Userinfo)(nil),
            Host:        "<replaced>",
            Path:        "/testns1/httpbun/redirect-to",
            RawPath:     "",
            OmitHost:    false,
            ForceQuery:  false,
            RawQuery:    "url=https%3A%2F%2Fgoogle.com",
            Fragment:    "",
            RawFragment: "",
        },
        Proto:      "HTTP/1.1",
        ProtoMajor: 1,
        ProtoMinor: 1,
        Header:     {
        },
        Body:             nil,
        GetBody:          func() (io.ReadCloser, error) {...},
        ContentLength:    0,
        TransferEncoding: nil,
        Close:            false,
        Host:             "<replaced>",
        Form:             {},
        PostForm:         {},
        MultipartForm:    (*multipart.Form)(nil),
        Trailer:          {},
        RemoteAddr:       "",
        RequestURI:       "",
        TLS:              (*tls.ConnectionState)(nil),
        Cancel:           0x0,
        Response:         (*http.Response)(nil),
        Pattern:          "",
        ctx:              context.backgroundCtx{},
        pat:              (*http.pattern)(nil),
        matches:          nil,
        otherValues:      {},
    },
    TLS: (*tls.ConnectionState)(nil),
}
---

[TestPassthrough - 2]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/hihi/%2F"
}
---

[TestPassthrough - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/get"
}
---

[TestOnlyGetAllowed - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any"
}
---

[TestWildcardRewrite - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/huhh"
}
---

[TestWildcardRewrite - 2]
{
 "args": {
  "abc": "lol",
  "x": "b"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/huhh?abc=lol&x=b"
}
---

[TestWildcardRewrite - 3]
{
 "args": {
  "abc": "魚",
  "x": "は"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/huhh?abc=魚&x=は"
}
---

[TestWildcardRewrite - 4]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/slash%2Fshould-bekept/next"
}
---

[TestPathRewrite - 1]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/efgh"
}
---

[TestPathRewrite - 2]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/huhh"
}
---

[TestPathRewrite - 3]
{
 "args": {
  "abc": "lol",
  "x": "b"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/huhh?abc=lol&x=b"
}
---

[TestPathRewrite - 4]
{
 "args": {
  "abc": "魚",
  "x": "は"
 },
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/a/huhh?abc=魚&x=は"
}
---

[TestPathRewrite - 5]
{
 "args": {},
 "data": "",
 "files": {},
 "form": {},
 "headers": {
  "Accept-Encoding": "gzip",
  "Host": "localhost:8080",
  "User-Agent": "Go-http-client/1.1"
 },
 "json": null,
 "method": "GET",
 "origin": "172.18.0.1",
 "url": "http://localhost:8080/any/slash%2Fshould-bekept/next"
}
---
